Fix manifest module-access syntax (#85)
Closes #39